# pinterest-ads-cli

./: .gitignore  Cargo.toml  README.md
.dots/: config
.dots/archive/: pinterest-ads-cli-f0da6b57939c855f.md
.github/workflows/: release.yml
schemas/: command_tree.json
scripts/: install.sh
src/: client.rs  command_tree.rs  main.rs  media_upload.rs  pagination.rs  s3.rs  sources.rs
tools/: fetch_openapi.py  gen_command_tree.py
