[package]
name = "pinterest-ads"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["string"] }
env_logger = "0.11.6"
log = "0.4.22"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tempfile = "3.15.0"
urlencoding = "2.1.3"

aws-config = "1.5.10"
aws-sdk-s3 = "1.63.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
